# bst_hebrew_converter

./: .gitignore  README.md  pyproject.toml
src/bst_hebrew_converter/: bst_unicode_translator.py  grabstein_io.py  main.py  utils.py
src/bst_hebrew_converter/data/bst_unicode/: 10_official_mapping.csv  90_custom_mapping.csv
tests/: test_bst_unicode_translator.py  test_grabstein_io.py  test_main.py
