[tool.poetry]
name = "bst-hebrew-converter"
version = "0.1.0"
description = ""
authors = ["Jakob Albert <jakob.j.albert@fau.de>"]
readme = "README.md"
packages = [{include = "bst_hebrew_converter", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.7.0"
hebrew = "^0.6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.2"

[tool.poetry.scripts]
start = "bst_hebrew_converter.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
